--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/favIcon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NotesBuddy</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=keyboard_arrow_down" />
   </head>
   <body>
     <div id="root"></div>
